# CMakeTemplates

CMake/: CMakeLists.txt
CMake/src/: main.cpp
CMakeCXXQt/: CMakeLists.txt
CMakeQtConan/: CMakeLists.txt  conanfile.txt
CMakeQtConan/src/: main.cpp
ConanCmakeTempalte/: CMakeLists.txt  conanfile.txt
ConanCmakeTempalte/src/: main.cpp
